--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@ package-lock.json
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
 /.pnp
 .pnp.js
 .yarn/install-state.gz
@@ -33,6 +32,8 @@ package-lock.json
 # next.js
 /.next/
 /out/
+.next
+out
 
 # production
 /build
